--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,8 @@
 # General
 --------------------------------------------------------------*/
 body {
-  background-color: #f5f5f5;
+  /* background-color: #f5f5f5; */
+  background-color: #0f0f0f;
   color: #4e4e4e;
 }
 
@@ -151,11 +152,12 @@ a:hover {
   font-size: 3rem;
   font-weight: bold;
   text-transform: uppercase;
+  color: #f1f1f1;
 }
 
 .subtitle-a {
   text-decoration: none;
-  color: #4e4e4e;
+  color: #cacaca;
 }
 
 .line-mf {
@@ -738,6 +740,7 @@ a:hover {
 .about-mf .box-shadow-full {
   padding-top: 4rem;
   padding-bottom: 4rem;
+  border-radius: 0.5rem;
 }
 .about-mf .about-img {
   margin-bottom: 2rem;
@@ -772,7 +775,7 @@ a:hover {
 .service-box {
   background-color: #fff;
   padding: 2.5rem 1.3rem;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   margin-bottom: 3rem;
   text-align: center;
 }
@@ -842,6 +845,8 @@ a:hover {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   background-color: #fff;
+  border-radius: 0.5rem;
+
 }
 .work-box:hover img {
   transform: scale(1.3);
@@ -850,6 +855,9 @@ a:hover {
 .work-img {
   display: block;
   overflow: hidden;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+
 }
 .work-img img {
   transition: all 1s;
